--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="card4">Interface</string>
     <string name="card5">Recents</string>
     <string name="card6">Misc</string>
+
+    <!-- Omani Themes -->
+    <string name="theme_select_title">System themes</string>
+    <string name="omni_theme_select_none">Disabled</string>
+    <string name="theme_select_summary">Theme your system</string>
+
 </resources>	
