--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -129,5 +129,6 @@
     <string name="qstile_default">Default</string>
     <string name="qstile_circle_trim">Circle with trim</string>
     <string name="qstile_dual_tone_circle">Dual-toned circle</string>
-    <string name="qstile_squircle_trim">Squircle with trim</string
+    <string name="qstile_squircle_trim">Squircle with trim</string>
+
 </resources>
